--- a/poi-velocity/src/main/resources/template.html
+++ b/poi-velocity/src/main/resources/template.html
@@ -28,9 +28,13 @@
                     <td>$i.mname</td>
                     <td>TSP</td>
                     <td>生产设备名称</td>
-                    <td>状态</td>
+                    <td>
+                        <i class="fa fa-toggle-on text-info fa-2x"></i>
+                    </td>
                     <td>$i.dname</td>
-                    <td>状态</td>
+                    <td>
+                        <i class="fa fa-toggle-on text-info fa-2x"></i>
+                    </td>
                 </tr>
                 #end
                 </tbody>
@@ -39,6 +43,5 @@
     </div>
 </div>
 <th:block th:include="include :: footer" />
-
 </body>
 </html>
